# FreeJam

./: .gitignore  Cargo.toml  README  file spec  freejam.html  freejam.py  guitest.py  libfreejam.py  shell.nix
instruments/keyboards/piano1/: instrument.xml
instruments/strings/basic strings/: instrument.xml
resources/image-textures/: key_black.xcf
src/: lib.rs  sound architecture.txt
testing/C++/: README.COMPILING  REQUIREMENTS  experiment  experiment.cpp  hello  hello-gl-dummy  hello.cpp  load_png.c  patest  patest.c  patest.cpp  play  reordering
testing/C++/OF/: soundPlayerExample.cbp  soundPlayerExample.workspace
testing/C++/OF/soundPlayerExample.xcodeproj/: project.pbxproj  skyler.mode1v3  skyler.pbxuser
testing/C++/OF/soundPlayerExample.xcodeproj/project.xcworkspace/xcuserdata/skyler.xcuserdatad/: UserInterfaceState.xcuserstate
testing/C++/OF/soundPlayerExample.xcodeproj/xcuserdata/skyler.xcuserdatad/xcschemes/: xcschememanagement.plist
testing/C++/OF/src/: FreeJamApp.cpp  FreeJamApp.h  main.cpp
webaudio/: tone.js
